plugins {
	id 'java'
	id 'war'
	id 'org.springframework.boot' version '3.5.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'vn.com.anhemsoftware.license-app'
version = '0.0.1-SNAPSHOT'
description = 'Anhemsoftware License App'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// JJWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	// JJWT Implementation (chỉ dùng ở runtime)
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	// Hỗ trợ Jackson cho Spring Boot (chỉ dùng ở runtime)
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	// JJWT API
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.amqp:spring-rabbit-test'
	// JJWT Implementation (chỉ dùng ở runtime)
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	// Hỗ trợ Jackson cho Spring Boot (chỉ dùng ở runtime)
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-tomcat'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.3'
	implementation 'org.mapstruct:mapstruct:1.6.3'
	runtimeOnly 'com.mysql:mysql-connector-j'
	// IP subnet comparison for RBA (Risk-Based Authentication)
	implementation 'com.github.seancfoley:ipaddress:5.5.0'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	// AWS S3
	implementation platform('software.amazon.awssdk:bom:2.29.52')
	implementation 'software.amazon.awssdk:s3'
	implementation 'software.amazon.awssdk:auth'
	implementation 'software.amazon.awssdk:regions'
	implementation 'software.amazon.awssdk:sdk-core'
}

tasks.named('test') {
	useJUnitPlatform()
}
